removed cow-photograph resources
replaced by picture resources
